Fix: CTA widget - Image stretch when in storytelling preset [TMZ-386]

--- a/modules/content/assets/scss/hello-plus-cta.scss
+++ b/modules/content/assets/scss/hello-plus-cta.scss
@@ -344,6 +344,19 @@
 				}
 			}
 		}
+
+		&-storytelling {
+
+			& .ehp-cta__elements-container {
+				max-width: unset;
+			}
+
+			& .ehp-cta__text-container,
+			& .ehp-cta__ctas-container {
+				margin: 0 auto;
+				max-width: var(--cta-content-width);
+			}
+		}
 	}
 
 	& a.ehp-button,
